@@ -42,7 +42,7 @@ public class Pachyderm extends StdRace
 	@Override public int weightVariance(){return 300;}
 	@Override public long forbiddenWornBits(){return ~(Wearable.WORN_HEAD|Wearable.WORN_EARS|Wearable.WORN_EYES);}
 	@Override public String racialCategory(){return "Pachyderm";}
-	@Override public boolean isRideable() { return true; }
+	@Override public boolean useRideClass() { return true; }
 
 	//  							  an ey ea he ne ar ha to le fo no gi mo wa ta wi
 	private static final int[] parts={0 ,2 ,2 ,1 ,1 ,0 ,0 ,1 ,4 ,4 ,1 ,0 ,1 ,1 ,1 ,0 };
