@@ -221,7 +221,7 @@ public interface Race extends Tickable, StatsAffecting, MsgListener, CMObject, M
 	 * Whether this race is usually rideable; helps determine the appropriate java class to use.
 	 * @return whether this race is generally rideable
 	 */
-	public boolean isRideable();
+	public boolean useRideClass();
 	/**
 	 * If this race is modifiable at run time, this method will return an xml document
 	 * describing the several attributes of this race.
