@@ -997,6 +997,10 @@ Goblins are small twisted creatures, quick on their feet, and natural tinkerers 
 wicked traps and devices  Their class choices are limited, but they excel at thieving, and make great \
 miners and delvers.
 
+CENTAUR=<RACE>\
+Centaurs are large creatures with the body of a horse and the upper torso, head, and arms of a human. \
+Their class choices are limited, but they excel at forestry, and make excellent rangers and druids.
+
 DROW=<RACE>\
 Drow are the dark cousins to elves.  Their existence living underground had radiated their bodies with \
 dark magic and give them advantages in the cold, dark world.  However, they hurt plenty when exposed to \
