@@ -8,3 +8,4 @@
 ^XOgre    :^.^? Big and powerful, but also a bit sluggish and none too smart or suave.
 ^XGoblin  :^.^? Both quick and quick-witted, these nasty, weak little critters are always into something.
 ^XDrow    :^.^? These dark skinned cousins of the elves hate the sunlight, and are quick, but frail.
+^XCentaur :^.^? These half-horse/half-human creatures are strong and smart, but abrupt and unwise.
