@@ -23,6 +23,8 @@
   21. RESET command can now be used to reset player/account passwords using RESET PASSWORD <name> syntax, assuming both cmdplayers and reset security.
   22. STAT [player name] and MODIFY PLAYER [name] will now show common account information.  It was so annoying not having this.
   23. Account Manager in MUDGrinder now has a page to create massive numbers of accounts.  Done for a teacher who emailed me once.
+  24. Races now include an isRideable flag to help inform mob class choice during character creation.  Make rideable players!
+  25. To go along with the above: Centaur is now a playable race.
 # Build 5.8.2 Release 6/13/2014
    0. Database Schema Updated! Run DBUpgrade, OR manually alter table CMCHCL to add CMCLSTS (see appropriate schema file)
    1. CM1Server has "FILE" command now for directory browsing/manipulation
